--- a/Tests CSS.html
+++ b/Tests CSS.html
@@ -1,80 +1,80 @@
 
 <!-- saved from url=(0062)http://atoum.imag.fr/geta/User/didier.schwab/IUT/test-css.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<html><head><meta http-equiv="Content-Type" content="text/html"; charset="UTF-8">
 		<title>Tests CSS</title>
   	<style type="text/css"></style></head>
 	<body>
 		<h1>La conscience</h1>
 		<h2>Victor Hugo (1802-1885)</h2>
 
-		<p>Lorsque avec ses enfants vêtus de peaux de bêtes,</p>
-<p>Echevelé, livide au milieu des tempêtes,</p>
-<p>Caïn se fut enfui de devant Jéhovah,</p>
+		<p>Lorsque avec ses enfants vÃªtus de peaux de bÃªtes,</p>
+<p>EchevelÃ©, livide au milieu des tempÃªtes,</p>
+<p>CaÃ¯n se fut enfui de devant JÃ©hovah,</p>
 <p>Comme le soir tombait, l'homme sombre arriva</p>
 <p>Au bas d'une montagne en une grande plaine ;</p>
-<p>Sa femme fatiguée et ses fils hors d'haleine</p>
-<p>Lui dirent : « Couchons-nous sur la terre, et dormons. »</p>
-<p>Caïn, ne dormant pas, songeait au pied des monts.</p>
-<p>Ayant levé la tête, au fond des cieux funèbres,</p>
-<p>Il vit un oeil, tout grand ouvert dans les ténèbres,</p>
+<p>Sa femme fatiguÃ©e et ses fils hors d'haleine</p>
+<p>Lui dirent : Â« Couchons-nous sur la terre, et dormons. Â»</p>
+<p>CaÃ¯n, ne dormant pas, songeait au pied des monts.</p>
+<p>Ayant levÃ© la tÃªte, au fond des cieux funÃ¨bres,</p>
+<p>Il vit un oeil, tout grand ouvert dans les tÃ©nÃ¨bres,</p>
 <p>Et qui le regardait dans l'ombre fixement.</p>
-<p>« Je suis trop près », dit-il avec un tremblement.</p>
-<p>Il réveilla ses fils dormant, sa femme lasse,</p>
-<p>Et se remit à fuir sinistre dans l'espace.</p>
+<p>Â« Je suis trop prÃ¨s Â», dit-il avec un tremblement.</p>
+<p>Il rÃ©veilla ses fils dormant, sa femme lasse,</p>
+<p>Et se remit Ã  fuir sinistre dans l'espace.</p>
 <p>Il marcha trente jours, il marcha trente nuits.</p>
-<p>Il allait, muet, pâle et frémissant aux bruits,</p>
-<p>Furtif, sans regarder derrière lui, sans trêve,</p>
-<p>Sans repos, sans sommeil; il atteignit la grève</p>
+<p>Il allait, muet, pÃ¢le et frÃ©missant aux bruits,</p>
+<p>Furtif, sans regarder derriÃ¨re lui, sans trÃªve,</p>
+<p>Sans repos, sans sommeil; il atteignit la grÃ¨ve</p>
 <p>Des mers dans le pays qui fut depuis Assur.</p>
-<p>« Arrêtons-nous, dit-il, car cet asile est sûr.</p>
-<p>Restons-y. Nous avons du monde atteint les bornes. »</p>
+<p>Â« ArrÃªtons-nous, dit-il, car cet asile est sÃ»r.</p>
+<p>Restons-y. Nous avons du monde atteint les bornes. Â»</p>
 <p>Et, comme il s'asseyait, il vit dans les cieux mornes</p>
-<p>L'oeil à la même place au fond de l'horizon.</p>
+<p>L'oeil Ã  la mÃªme place au fond de l'horizon.</p>
 <p>Alors il tressaillit en proie au noir frisson.</p>
-<p>« Cachez-moi ! » cria-t-il; et, le doigt sur la bouche,</p>
-<p>Tous ses fils regardaient trembler l'aïeul farouche.</p>
-<p>Caïn dit à Jabel, père de ceux qui vont</p>
-<p>Sous des tentes de poil dans le désert profond :</p>
-<p>« Etends de ce côté la toile de la tente. »</p>
-<p>Et l'on développa la muraille flottante ;</p>
-<p>Et, quand on l'eut fixée avec des poids de plomb :</p>
-<p>« Vous ne voyez plus rien ? » dit Tsilla, l'enfant blond,</p>
+<p>Â« Cachez-moi ! Â» cria-t-il; et, le doigt sur la bouche,</p>
+<p>Tous ses fils regardaient trembler l'aÃ¯eul farouche.</p>
+<p>CaÃ¯n dit Ã  Jabel, pÃ¨re de ceux qui vont</p>
+<p>Sous des tentes de poil dans le dÃ©sert profond :</p>
+<p>Â« Etends de ce cÃ´tÃ© la toile de la tente. Â»</p>
+<p>Et l'on dÃ©veloppa la muraille flottante ;</p>
+<p>Et, quand on l'eut fixÃ©e avec des poids de plomb :</p>
+<p>Â« Vous ne voyez plus rien ? Â» dit Tsilla, l'enfant blond,</p>
 <p>La fille de ses Fils, douce comme l'aurore ;</p>
-<p>Et Caïn répondit : « je vois cet oeil encore ! »</p>
-<p>Jubal, père de ceux qui passent dans les bourgs</p>
+<p>Et CaÃ¯n rÃ©pondit : Â« je vois cet oeil encore ! Â»</p>
+<p>Jubal, pÃ¨re de ceux qui passent dans les bourgs</p>
 <p>Soufflant dans des clairons et frappant des tambours,</p>
-<p>Cria : « je saurai bien construire une barrière. »</p>
-<p>Il fit un mur de bronze et mit Caïn derrière.</p>
-<p>Et Caïn dit « Cet oeil me regarde toujours! »</p>
-<p>Hénoch dit : « Il faut faire une enceinte de tours</p>
+<p>Cria : Â« je saurai bien construire une barriÃ¨re. Â»</p>
+<p>Il fit un mur de bronze et mit CaÃ¯n derriÃ¨re.</p>
+<p>Et CaÃ¯n dit Â« Cet oeil me regarde toujours! Â»</p>
+<p>HÃ©noch dit : Â« Il faut faire une enceinte de tours</p>
 <p>Si terrible, que rien ne puisse approcher d'elle.</p>
-<p>Bâtissons une ville avec sa citadelle,</p>
-<p>Bâtissons une ville, et nous la fermerons. »</p>
-<p>Alors Tubalcaïn, père des forgerons,</p>
-<p>Construisit une ville énorme et surhumaine.</p>
-<p>Pendant qu'il travaillait, ses frères, dans la plaine,</p>
+<p>BÃ¢tissons une ville avec sa citadelle,</p>
+<p>BÃ¢tissons une ville, et nous la fermerons. Â»</p>
+<p>Alors TubalcaÃ¯n, pÃ¨re des forgerons,</p>
+<p>Construisit une ville Ã©norme et surhumaine.</p>
+<p>Pendant qu'il travaillait, ses frÃ¨res, dans la plaine,</p>
 <p>Chassaient les fils d'Enos et les enfants de Seth ;</p>
-<p>Et l'on crevait les yeux à quiconque passait ;</p>
-<p>Et, le soir, on lançait des flèches aux étoiles.</p>
-<p>Le granit remplaça la tente aux murs de toiles,</p>
+<p>Et l'on crevait les yeux Ã  quiconque passait ;</p>
+<p>Et, le soir, on lanÃ§ait des flÃ¨ches aux Ã©toiles.</p>
+<p>Le granit remplaÃ§a la tente aux murs de toiles,</p>
 <p>On lia chaque bloc avec des noeuds de fer,</p>
 <p>Et la ville semblait une ville d'enfer ;</p>
 <p>L'ombre des tours faisait la nuit dans les campagnes ;</p>
-<p>Ils donnèrent aux murs l'épaisseur des montagnes ;</p>
-<p>Sur la porte on grava : « Défense à Dieu d'entrer. »</p>
+<p>Ils donnÃ¨rent aux murs l'Ã©paisseur des montagnes ;</p>
+<p>Sur la porte on grava : Â« DÃ©fense Ã  Dieu d'entrer. Â»</p>
 <p>Quand ils eurent fini de clore et de murer,</p>
-<p>On mit l'aïeul au centre en une tour de pierre ;</p>
-<p>Et lui restait lugubre et hagard. « Ô mon père !</p>
-<p>L'oeil a-t-il disparu ? » dit en tremblant Tsilla.</p>
-<p>Et Caïn répondit : " Non, il est toujours là. »</p>
-<p>Alors il dit: « je veux habiter sous la terre</p>
-<p>Comme dans son sépulcre un homme solitaire ;</p>
-<p>Rien ne me verra plus, je ne verrai plus rien. »</p>
-<p>On fit donc une fosse, et Caïn dit « C'est bien ! »</p>
-<p>Puis il descendit seul sous cette voûte sombre.</p>
+<p>On mit l'aÃ¯eul au centre en une tour de pierre ;</p>
+<p>Et lui restait lugubre et hagard. Â« Ã” mon pÃ¨re !</p>
+<p>L'oeil a-t-il disparu ? Â» dit en tremblant Tsilla.</p>
+<p>Et CaÃ¯n rÃ©pondit : " Non, il est toujours lÃ . Â»</p>
+<p>Alors il dit: Â« je veux habiter sous la terre</p>
+<p>Comme dans son sÃ©pulcre un homme solitaire ;</p>
+<p>Rien ne me verra plus, je ne verrai plus rien. Â»</p>
+<p>On fit donc une fosse, et CaÃ¯n dit Â« C'est bien ! Â»</p>
+<p>Puis il descendit seul sous cette voÃ»te sombre.</p>
 <p>Quand il se fut assis sur sa chaise dans l'ombre</p>
-<p>Et qu'on eut sur son front fermé le souterrain,</p>
-<p>L'oeil était dans la tombe et regardait Caïn.</p>
+<p>Et qu'on eut sur son front fermÃ© le souterrain,</p>
+<p>L'oeil Ã©tait dans la tombe et regardait CaÃ¯n.</p>
 <p>
 
 </p></body></html>
