--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -588,7 +588,7 @@
                                                     Laissez de côté Weebly et revenez dans le système de fichier de
                                                     votre ordinateur.</LI>
                                                 <LI>Créez un répertoire (un dossier) appelé <I>test-CSS</I>.</LI>
-                                                <LI>Enregistrez <A HREF="Tests_CSS.html"> ce
+                                                <LI>Enregistrez <A HREF="Tests-css.html"> ce
                                                     fichier</A> dans le
                                                     répertoire puis ouvrez-le avec le bloc-note.</LI>
                                                 <LI>
