--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -692,6 +692,12 @@
 
                                                         </div>
                                                        
+                                                        <UL>
+                                                            <LI>Rajouter à gauche la photo de
+                                                                Victor Hugo que l'on trouve sur le site de Wikipedia. Elle doit
+                                                                rester au même endroit de la fenêtre même si on fait défiler le
+                                                                poème.</LI>
+                                                
                                                         </UL>
 
 
