--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -714,7 +714,9 @@
                                                             du site, cliquez sur l'onglet <I>Thème</I>
                                                             <LI>Cliquez sur<I>
                                                                 Editer HTML/CSS</I></LI>
-                                                            <LI>Cliquez sur "main.less" et cherchez sur le code les indications "Text and type". Avec l'aide de <A HREF="http://goulvench.free.fr/vrac/CSS.html">  cette page de références</A> explorez et modifiez les valeurs mis par défault sur votre site. 
+                                                      <LI>Modifiez
+                                                                la CSS de telle sorte que l'image que l'on trouve <A HREF="http://static2.grsites.com/archive/textures/water/water020.gif" target="blank">ici</A>
+                                                                se répète dans le fond de la page. 
                                                             </LI>
                                                             </UL>
 
