--- a/consignes-evaluation.html
+++ b/consignes-evaluation.html
@@ -11,20 +11,20 @@
 <H1>Dates d'évaluation </H1>
 
   <UL>
-		<LI> TC21A : Mercredi 29/11, 13h-15h, DG-S33
-		<LI> TC21B : Mardi 28/11, 13h-15h, Salle à définir
+		<LI> TC21A : Mercredi 05/12, 8h-9h40, DG-S34
+		<LI> TC21B : Mercredi 05/12, 9h45-12h00, S34
 		<p> </p>
-		<LI> TC22A : Mardi 28/11, 15h-17h, DG-S34
-		<LI> TC22B : Mardi 28/11, 10h-12h, DG-023, DG-020
+		<LI> TC22A : Mercredi 05/12, 13h-14h40, DG-S33
+		<LI> TC22B : Mercredi 05/12, 14h45-17h, DG-S33
 		<p> </p>
-		<LI> TC23A : Vendredi 01/12, 15h-17h, DG-S37
-		<LI> TC23B : Vendredi 01/12, 13h-15h, DG-S37
+		<LI> TC23A : Jeudi 06/12, 8h-9h40, DG-020
+		<LI> TC23B : Jeudi 06/12, 9h45-12h00, DG-020
 		<p> </p>
-		<LI> TC24A : Lundi 27/11, 13h-15h, DG-023, DG-020
-		<LI> TC24B : Lundi 27/11, 15h-17h, DG-023, DG-020
+		<LI> TC24A : À définir
+		<LI> TC24B : À définir
 		<p> </p>
-		<LI> TC25A : Mercredi 29/11, 08h-10h, DG-023, DG-020
-		<LI> TC25B : Mercredi 29/11, 10h-12h, DG-023, DG-020
+		<LI> TC25A : À définir
+		<LI> TC25B : À définir
 	</UL>
 		
 <p> L'heure de convocation individuelle se trouve sur Chamilo ("TC CI2 - Technologie de l'Information et de la Communication 3" > "Documents"  > "Convocations Évaluation Site Web TC21, TC22, TC23, TC24 et TC25") Merci de vérifier si votre nom se trouve dans la liste correspondante. </p>
