--- a/consignes-evaluation.html
+++ b/consignes-evaluation.html
@@ -6,7 +6,7 @@
             <link type="text/css" rel="stylesheet" href="style-cours-TC-IUT2.css" />
     </HEAD>
     <BODY>
-        <TITLE>Consignes évaluation 2017-2018</TITLE>
+        <TITLE>Consignes évaluation 2018-2019</TITLE>
 
 <H1>Dates d'évaluation </H1>
 
@@ -35,11 +35,11 @@
 
 <H1>Evaluation du site web </H1>
 
-        <P>Vous devrez vous présenter le site web que vous avez crée + le dépliant (env. 7 min par personne, en indiquant de quoi s'agit votre site, les pages qu'elle contient, les changements CSS que vous avez fait et le contenu du dépliant). Vous allez :
+        <P>Vous devrez vous présenter le site web que vous avez crée + le dépliant (env. 7 min par personne, en indiquant du sujet de votre site, son contenu, les changements CSS que vous avez réalisés et le contenu du dépliant). Vous allez :
 
  <UL>
 		<LI><P><B>Présenter le site web fini</B> </P></LI>
-		<LI><P><B>Montrer comment vous avez édite le site sur Weebly</B> </P></LI>
+		<LI><P><B>Montrer comment vous avez édité le site sur Weebly</B> </P></LI>
 	
                             </UL>
 
@@ -48,11 +48,11 @@
             <UL>
 		<LI><P><B>Un document d'une dizaine de pages </B> expliquant <B>la conception de votre site</B>
                             Web grâce en particulier à des captures d'écran lisibles type avant/après ainsi que <B>la conception de votre dépliant</B> (objectifs des supports, conception pratique, difficultés, …). (Cf. "Cours 4") </P></LI>
-		<LI><P><B>Le dépliant sur papier qui permettra de présenter l'enterprise montrée dans votre site web</b> (Cours 3, Prochain TD)</P>
+		<LI><P><B>Le dépliant sur papier qui permettra de présenter l'entreprise montrée dans votre site web</b> (Cours 3, Prochain TD)</P>
                     
 <H2>Dêpot de documents sur Chamilo </H2>
 
-<P><b>Il y a 4 documents à déposer sur Chamilo : le dossier de conception (format .pdf et .odt, si pour le dossier vous avez travaillé sur Word, vous pouvez télécharger le fichier .doc aussi, pas de problème) + dépliant (format .pdf et .odt) </b>  Le dêpoit sera fait le jour que vous avez présenté votre site ("TC CI2 - Technologie de l'Information et de la Communication 3" > "Travaux"  > Séléctionner le groupe et la section à laquelle vous appartient), et avant minuit, (example le groupe TC21A doit le rendre le mercredi 29/11, le TC21B le mardi 28/11, etc.) </P>
+<P><b>Il y a 4 documents à déposer sur Chamilo : le dossier de conception (format .pdf et .odt) + dépliant (format .pdf et .odt) </b>  Le dépôt sera à réaliser avant de venir pour votre soutenance ("TC CI2 - Technologies de l'Information et de la Communication 3" > "Travaux"  > Séléctionner le groupe et la section à laquelle vous appartient), et avant minuit, (example le groupe TC21A doit le rendre le mercredi 29/11, le TC21B le mardi 28/11, etc.) </P>
                      
                             </UL>
 
