--- a/consignes-evaluation.html
+++ b/consignes-evaluation.html
@@ -52,7 +52,7 @@
                     
 <H2>Dêpot de documents sur Chamilo </H2>
 
-<P><b>Il y a 4 documents à déposer sur Chamilo : le dossier de conception (format .pdf et .odt) + dépliant (format .pdf et .odt) </b>  Le dépôt sera à réaliser avant de venir pour votre soutenance ("TC CI2 - Technologies de l'Information et de la Communication 3" > "Travaux"  > Séléctionner le groupe et la section à laquelle vous appartient), et avant minuit, (example le groupe TC21A doit le rendre le mercredi 29/11, le TC21B le mardi 28/11, etc.) </P>
+<P><b>Il y a 4 documents à déposer sur Chamilo : le dossier de conception (format .pdf et .odt) + dépliant (format .pdf et .odt) </b>  Le dépôt sera à réaliser avant de venir pour votre soutenance ("TC CI2 - Technologies de l'Information et de la Communication 3" > "Travaux"  > Séléctionner le groupe et la section à laquelle vous appartenez), et avant minuit, (exemple le groupe TC21A doit le rendre le mardi 04/12, le TC23B le mercredi 05/12, etc.) </P>
                      
                             </UL>
 
