--- a/consignes-evaluation.html
+++ b/consignes-evaluation.html
@@ -11,23 +11,23 @@
 <H1>Dates d'évaluation </H1>
 
   <UL>
-		<LI> TC21A : Mercredi 05/12, 8h-9h40, DG-S34
-		<LI> TC21B : Mercredi 05/12, 9h45-12h00, S34
+		<LI> TC21A : à définir
+		<LI> TC21B : à définir
 		<p> </p>
-		<LI> TC22A : Mercredi 05/12, 13h-14h40, DG-S33
-		<LI> TC22B : Mercredi 05/12, 14h45-17h, DG-S33
+		<LI> TC22A : à définir
+		<LI> TC22B : à définir
 		<p> </p>
-		<LI> TC23A : Jeudi 06/12, 8h-9h40, DG-020
-		<LI> TC23B : Jeudi 06/12, 9h45-12h00, DG-020
+		<LI> TC23A : à définir
+		<LI> TC23B : à définir
 		<p> </p>
-		<LI> TC24A : À définir
+		<LI> TC24A : à définir
 		<LI> TC24B : À définir
 		<p> </p>
 		<LI> TC25A : À définir
 		<LI> TC25B : À définir
 	</UL>
 		
-<p> L'heure de convocation individuelle se trouve sur Chamilo ("TC CI2 - Technologie de l'Information et de la Communication 3" > "Documents"  > "Convocations Évaluation Site Web TC21, TC22, TC23, TC24 et TC25") Merci de vérifier si votre nom se trouve dans la liste correspondante. </p>
+<p> L'heure de convocation individuelle se trouvera sur Chamilo ("TC CI2 - Technologie de l'Information et de la Communication 3" > "Documents"  > "Convocations Évaluation Site Web TC21, TC22, TC23, TC24 et TC25") Merci de vérifier si votre nom se trouve dans la liste correspondante. </p>
 
 
 
@@ -113,7 +113,7 @@
 
   </UL>
 
-<P>OBLIGATOIRE : Un minimum de 8 changements du type CSS à faire dans votre site, au plus de ceux faits avec les options données par Weebly</P>
+<P>OBLIGATOIRE : Un minimum de changements du type CSS à faire dans votre site, au plus de ceux faits avec les options données par Weebly</P>
 
 <P>Attention I : Pensez à prendre de notes et des captures d'écran lorsque vous faites le site. Cela vous aidera à écrire le document qui expliquera la conception (Cf. "Evaluation du site web") <P>
 
