--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
             IUT2-Grenoble
         </Subtitle>
         <Subtitle>
-            2018-2019<BR/></Subtitle>
+            2019-2020<BR/></Subtitle>
         <BR/>
         <BR/>
         <BR/>
         <H2>Cours 1 et 2 : <BR/> <A HREF="TD-Sites-Web.html">Création de Sites Web</A></H2>
-        
-        <H2>Cours 3 : <BR/> <A HREF="PAO.html">Publication Assistée par Ordinateur
-            </A></H2>
-			<H2>Cours 4 : <BR/> <A HREF="Consignes-CE-Writer.html">Traitements de Texte avancé
-            </A></H2>
+        <H2>Cours 3 : <BR/> Projet</H2>
+        <H2>Cours 4 : <BR/> <A HREF="PAO.html">Publication Assistée par Ordinateur</A></H2>
         <H2>Cours 5 : <BR/> Projet</H2>
         
         <H2><A HREF="consignes-evaluation">Consignes évaluation<A></H2>
