modif page PAO (qq corrections orthographe).

--- a/PAO.html
+++ b/PAO.html
@@ -1,7 +1,7 @@
 <HTML>
     <HEAD>
         <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
-            <TITLE>Publication Assistée par Ordinateurs</TITLE>
+            <TITLE>Publication Assistée par Ordinateur</TITLE>
             <link type="text/css" rel="stylesheet" href="style-cours-TC-IUT2.css" />
             </HEAD>
     <BODY LANG="fr-FR" DIR="LTR">
@@ -10,7 +10,7 @@
         <P>
         La publication assistée par ordinateur, autrement appelée PAO
         désigne l'ensemble des procédés informatiques permettant de
-        fabriquer des documents destinés à l'impression. 
+        fabriquer des documents destinés à l'impression.
         </P>
         <div class="visu">
             <H3>À retenir</H3>
@@ -193,7 +193,7 @@
             perte c'est-à-dire que plus le taux de compression  est fort, moins
             la qualité est bonne puisque plus les informations sur l'image sont
             perdues. Il est principalement utilisé pour les photos.</P>
-            
+
             <A HREF="http://fr.wikipedia.org/wiki/Fichier:JPEG_example_flower.jpg"><IMG SRC="PAO_html_5cfec111.jpg" NAME="images6"  WIDTH=70%  BORDER=0><BR CLEAR=LEFT></A>La
             photo suivante est compressée avec un taux de plus en plus important
             en allant de la gauche à la droite.</P>
@@ -206,10 +206,10 @@
         l'organisation des différents contenus sur la page en manipulant des
         zones (textuelles, images, tableaux, formes,...).</P>
         <P>
-        On défini ces zones, leur placement, leur taille. utilise des zones
+        On définit ces zones, leur placement, leur taille. On utilise des zones
         de texte, de la taille que l'on veut, et qu'on peut placer librement
-        dans le document on peut « lier » plusieurs zones de texte de
-        taille différentes</P>
+        dans le document. On peut « lier » plusieurs zones de texte de
+        taille différentes. </P>
         <H1>Principes de PAO<A CLASS="sdfootnoteanc" NAME="sdfootnote1anc" HREF="#sdfootnote1sym"><SUP>1</SUP></A></H1>
         <H2>Logiciels de PAO</H2>
         <P>
@@ -242,7 +242,7 @@
         <UL>
             <LI>
                 l'ancrage (onglet « Type ») : l'ancrage à la page permet de
-                placer librement le cadre ; 
+                placer librement le cadre ;
             </LI>
             <LI>sa
                 taille (onglet « Type ») : attention, si la case <I>Taille
@@ -272,11 +272,11 @@
                         <LI>
                             Sélectionnez l'un des deux</LI>
                             <LI>Cliquez
-                                sur bouton enchaîner sur la droite de la barre d'outil</LI> 
+                                sur bouton enchaîner sur la droite de la barre d'outil</LI>
                         <IMG SRC="PAO_html_2658e117.gif" NAME="images5" WIDTH=20% BORDER=0><BR CLEAR=LEFT>
                         <LI>Cliquez
                             sur le second cadre de texte, les deux cadres sont maintenant liés.
-                            Ce lien est matérialisé par une ligne en pointillée (qui
+                            Ce lien est matérialisé par une ligne en pointillé (qui
                             n'apparaît évidemment pas à l'impression)</LI>
                         <LI>Allez
                             sur le site <A HREF="http://www.faux-texte.com/">http://www.faux-texte.com/</A>.
@@ -291,7 +291,7 @@
             L'insertion d'une image se fait comme d'habitude.</P>
             <H1>Réalisation d'une plaquette</H1>
             <P>
-            Nous allons réaliser une plaquette avec Libo Writer. Il aura 3 volets
+            Nous allons réaliser une plaquette avec Libo Writer. Elle aura 3 volets
             rabattus l'un sur l'autre. En pratique, il s'agit d'une feuille (A4)
             pliée en 3, comme sur l'illustration. Une feuille A4 a comme
             dimension, 29,7 cm dans le sens le plus long et 21 cm dans le sens le
@@ -314,7 +314,7 @@
                             sous-titre ;</LI>
                         <LI>Zone
                             6 : le dos : l'autre face visible lorsque la plaquette est pliée.
-                            Il
+                            Elle
                             doit présenter des informations complémentaires et utiles, en
                             particulier les coordonnées de l'entreprise, de
                             l'association/l'office de tourisme/etc.</LI>
@@ -344,7 +344,7 @@
                 Vous devez concevoir une plaquette sur la ville de Grenoble. Le texte
                 sera inspiré de <A HREF="http://fr.wikipedia.org/wiki/Grenoble">la
                     page Wikipedia sur la ville</A>. Vous devrez l'illustrer de photos et
-                de graphiques trouvés sur le Web conçus et/ou modifiés par vous. 
+                de graphiques trouvés sur le Web conçus et/ou modifiés par vous.
                 </P>
                 <H1>Webographie</H1>
                 La PAO (wikipedia)
@@ -369,7 +369,7 @@
                 <A HREF="http://fr.wikipedia.org/wiki/LibreOffice_Draw">http://fr.wikipedia.org/wiki/LibreOffice_Draw</A></P>
                 images matricielles
                 <A HREF="http://fr.wikipedia.org/wiki/Image_matricielle">http://fr.wikipedia.org/wiki/Image_matricielle</A></P>
-                    
+
                 </P>
                 <DIV ID="sdfootnote1">
                     <P LANG="zxx" CLASS="sdfootnote"><A CLASS="sdfootnotesym" NAME="sdfootnote1sym" HREF="#sdfootnote1anc">1</A>Partie
