remove more special char.

--- a/PAO.html
+++ b/PAO.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE HTML>
 <HTML>
     <HEAD>
         <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
@@ -210,7 +210,7 @@
         <P>
         On définit ces zones, leur placement, leur taille. On utilise des zones
         de texte, de la taille que l'on veut, et qu'on peut placer librement
-        dans le document. On peut "lier » plusieurs zones de texte de
+        dans le document. On peut "lier" plusieurs zones de texte de
         taille différentes. </P>
         <H1>Principes de PAO<A CLASS="sdfootnoteanc" NAME="sdfootnote1anc" HREF="#sdfootnote1sym"><SUP>1</SUP></A></H1>
         <H2>Logiciels de PAO</H2>
