--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -500,10 +500,8 @@
                                 <UL>
                                     <LI>Définissez
                                         l’arborescence pour qu'elle soit identique à celle ci-dessous (carré rouge).
-                                        Ici, le site est composé de trois pages principales (accueil,
-                                        Première année, Deuxième année) et de six &quot;sous-pages
-                                        (faire glisser les pages vers la droite pour en faire
-                                        dessous-pages).</LI>
+                                        Faites glisser les pages vers la droite pour en faire
+                                        dessous-pages.</LI>
                                 </UL>
 
                                 <IMG SRC="arborescenceWeebly.png" NAME="images3" ALIGN=CENTER WIDTH=100% BORDER=0>
