--- a/consignes-evaluation.html
+++ b/consignes-evaluation.html
@@ -6,8 +6,12 @@
             <link type="text/css" rel="stylesheet" href="style-cours-TC-IUT2.css" />
     </HEAD>
     <BODY>
-        <TITLE>Consignes évaluation 2019-2020</TITLE>
+        <TITLE>Consignes évaluation 2021-2022</TITLE>
 
+	    <p>Sera mis à jour en temps utile.</p>
+	    
+	   <p>Pour mémoire, les consignes des années précédantes : </p>
+	    
 <H1>Dates d'évaluation </H1>
 
   <UL>
