--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -286,7 +286,7 @@
                             <P>
                             Par exemple, <I>&lt;a href=&quot;Bonjour.html&quot; target=&quot;_BLANK&quot;&gt;</I>
                             signifie que pour la balise<I> &lt;a&gt; </I>l'attribut<I> href </I>a
-                            la valeur<I> Bonjour.html (la page cible) </I>et l'attibut<I> target
+                            la valeur<I> Bonjour.html (la page cible) </I>et l'attribut<I> target
                             </I>est la fenêtre cible<I> (</I>avec<I> _BLANK, </I>une nouvelle).</P>
                             <P>
                             La structure d'une balise fermante est plus simple</P>
