--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -141,7 +141,7 @@
                 <div class="visu">
                     <H3>En savoir plus</H3>
                     <P>
-                    En septembre 2018, les 5 navigateurs Web les plus utilisés sont
+                    En octobre 2022, les 5 navigateurs Web les plus utilisés sont
                     (<A HREF="http://gs.statcounter.com/browser-market-share/desktop-tablet-console/worldwide/#monthly-201809-201809-bar" target="blank">source</A>)
                     :</P>
                     <P>
@@ -150,15 +150,12 @@
                     </P>
                     <P>
                     <A HREF="http://www.mozilla-europe.org/fr/firefox/" target="blank"><IMG SRC="TD-Sites-Web_html_675359c5.png" NAME="HTTP://WWW.MOZILLA-EUROPE.ORG/FR/FIREFOX/"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Mozilla
-                    Firefox, libre, gratuit et multiplateforme (pdm 10%)</P>
+                    Firefox, libre, gratuit et multiplateforme (pdm 8,52%)</P>
                     <P><A HREF="https://www.google.com/chrome/" target="blank"><IMG SRC="TD-Sites-Web_html_m33457f86.gif" NAME="HTTP://WWW.GOOGLE.COM/CHROME"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Google
-                    Chrome (pdm 63%)</P>
+                    Chrome (pdm 66,31%)</P>
                     <p>
-                    <A HREF="http://www.microsoft.com/france/windows/internet-explorer/telecharger-ie9.aspx" target="blank"><IMG SRC="TD-Sites-Web_html_25e46ee4.png" NAME="HTTP://WWW.MICROSOFT.COM/FRANCE/WINDOWS/INTERNET-EXPLORER/TELECHARGER-IE8.ASPX"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Microsoft
-                    Windows Internet Explorer 8 qui est <A HREF="http://www.clubic.com/article-282232-1-comparatif-internet-explorer-firefox-opera-safari.html" target="blank">actuellement
-                        le plus mauvais</A> et a été longtemps le plus utilisé des navigateurs (pdm 6,35% pic
-                    à 95% en 2002-2003). Il est aujourd'hui remplacé par Edge (pdm 4%).</P>
-                    <P>
+                        Edge (pdm 10,27%).</P>
+                   <!-- <P>
                     Une répartition différente sur dispositif mobiles (<A HREF="http://gs.statcounter.com/#mobile_browser-ww-monthly-201112-201112-bar" target="blank">source</A>)</P>
                     <P/>
                     <P>
@@ -169,7 +166,7 @@
                             safari (pdm 18,63%)</P>
                             </div>
 
-                <P>
+                <P>-->
                 Il s'agit d'un lien hypertexte (ou hyperlien) qui permet, ici de
                 passer d'une page à une autre. Il sont l'essence du Web et rendent
                 également possible le passage vers d'autres services comme le
