--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -218,7 +218,7 @@
                         page, ce qui s'affiche dans la fenêtre</P>
                         <P>
                         Même si la plupart des navigateurs
-                        sont permissif, il vaut toujours mieux respecter les conventions et
+                        sont permissifs, il vaut toujours mieux respecter les conventions et
                         une page Web doit avoir <B>une
                             seule tête</B> et <B>un
                                 seul corps</b>.
