--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -150,23 +150,25 @@
                     </P>
                     <P>
                     <A HREF="http://www.mozilla-europe.org/fr/firefox/" target="blank"><IMG SRC="TD-Sites-Web_html_675359c5.png" NAME="HTTP://WWW.MOZILLA-EUROPE.ORG/FR/FIREFOX/"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Mozilla
-                    Firefox, libre, gratuit et multiplateforme (pdm 8,52%)</P>
+                    Firefox, libre, gratuit et multiplateforme (pdm 10%)</P>
                     <P><A HREF="https://www.google.com/chrome/" target="blank"><IMG SRC="TD-Sites-Web_html_m33457f86.gif" NAME="HTTP://WWW.GOOGLE.COM/CHROME"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Google
-                    Chrome (pdm 66,31%)</P>
+                    Chrome (pdm 63%)</P>
                     <p>
-                        Edge (pdm 10,27%).</P>
-                   <!-- <P>
+                        Edge (pdm 4%).</P>
+                   <P>
                     Une répartition différente sur dispositif mobiles (<A HREF="http://gs.statcounter.com/#mobile_browser-ww-monthly-201112-201112-bar" target="blank">source</A>)</P>
                     <P/>
                     <P>
                 <P><A HREF="https://www.google.com/chrome/" target="blank"><IMG SRC="TD-Sites-Web_html_m33457f86.gif" NAME="HTTP://WWW.GOOGLE.COM/CHROME"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Google
-                    Chrome (pdm 56%)</P>
+                    Chrome (pdm 65%)</P>
                             <P>
                             <A HREF="http://www.apple.com/fr/safari/" target="blank"><IMG SRC="TD-Sites-Web_html_503981f7.png" NAME="images4"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Apple
-                            safari (pdm 18,63%)</P>
+                            safari (pdm 24%)</P>
+                            <P>
+                            Samsung Internet (pdm 5%)</P>
                             </div>
 
-                <P>-->
+                <P>
                 Il s'agit d'un lien hypertexte (ou hyperlien) qui permet, ici de
                 passer d'une page à une autre. Il sont l'essence du Web et rendent
                 également possible le passage vers d'autres services comme le
