--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -425,7 +425,7 @@
                             n'ont qu'à gérer le contenu et ne se préoccupent pas du stockage
                             ni de la cohérence graphique. Pour un utilisateur lambda, il s'agit
                             d'un site Web pour lequel il peut créer et/ou éditer des pages.
-                            Vous en utilisez un depuis que vous êtes à l'iut l'intratek.</P>
+                            Vous en utilisez un depuis que vous êtes à l'iut Chamilo.</P>
                            <!-- <UL>
                                         <LI><P>Connectez-vous
                                             sur l' <A HREF="http://intratek-08.iut2.upmf-grenoble.fr/index.php" target="blank">intranet</A> et allez dans <I>enseignement&gt;informatique&gt;Web</I></P>
@@ -465,7 +465,7 @@
                                 Ici, nous allons réaliser un petit site Web sur le département
                                 Techniques de Commercialisation.</P>
                                 <P>
-                                <B>Rappel</B> : votre navigateur <B>doit être</B> Mozilla Firefox</P>
+                                <B>Rappel</B> : votre navigateur <B>doit être</B> Mozilla Firefox (éventuellement chrome ou edge)</P>
                                 <UL>
                                     <LI>Allez
                                         sur le site de Weebly et cliquez sur "S'inscrire" (coin en haut à droite de l'écran)  (<A HREF="https://www.weebly.com/fr"  target="blank">https://www.weebly.com/fr</A>)</LI>
@@ -485,7 +485,7 @@
                                 <P>
                                 Vous êtes maintenant sur la page d'édition.
                                 Donnez un titre à votre site (<I>Site Web TC</I>). C'est ici que vous
-                                allez construire les pages de votre site. Weebly permet au créateur du site web de glisser-déposer des blocs contenant des fonctionnalités ou sections. Ainsi, il faudra que décider ce qu'on veut ajouter ainsi que son lieu sur la page. La plupart de modèles ont déjà un format prédefini (couleurs, polices, etc..). Toutefois, ils permettent de les modifier pour avoir un résultat plus personalisé. Par défault, elle travaille d'abord sur la page d'accueil, c'est à dire la première page que les personnes vont regarder. Pour modifier une autre, il faut aller sur l'onglet "Pages" (Menu supérieur), cliquer sur celle à éditer et cliquer encore une fois sur "Construire" (Menu supérieur) pour retourner sur l'espace d'édition. </P>
+                                allez construire les pages de votre site. Weebly permet au créateur du site web de glisser-déposer des blocs contenant des fonctionnalités ou sections. Ainsi, il faudra décider ce qu'on veut ajouter ainsi que son lieu sur la page. La plupart de modèles ont déjà un format prédefini (couleurs, polices, etc..). Toutefois, Weebly permet de les modifier pour avoir un résultat plus personalisé. Par défaut, Weebly travaille d'abord sur la page d'accueil, c'est à dire la première page que les personnes vont regarder. Pour en modifier une autre, il faut aller sur l'onglet "Pages" (Menu supérieur), cliquer sur celle à éditer et cliquer encore une fois sur "Construire" (Menu supérieur) pour retourner sur l'espace d'édition. </P>
 </UL>
 <LI>Les options pour modifier le contenu du site se trouvent au côté gauche. Prenez un peu du temps pour les explorer</LI>
                                                     <p><IMG SRC="editionWeebly.png" NAME="formulaireInscription" ALIGN=center WIDTH=50%  BORDER=0></p>
