--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -714,7 +714,7 @@
                                                             <LI>Cliquez sur<I>
                                                                 Editer HTML/CSS</I></LI>
                                                       <LI>Modifiez
-                                                                la CSS de telle sorte que l'image que l'on trouve <A HREF="http://static2.grsites.com/archive/textures/water/water020.gif" target="blank">ici</A>
+                                                                la CSS de telle sorte que l'image que l'on trouve <A HREF="https://img1.picmix.com/output/stamp/normal/9/5/1/8/1538159_bc6d1.gif" target="blank">ici</A>
                                                                 se répète dans le fond de la page.
                                                             </LI>
                                                             </UL>
