--- a/PAO.html
+++ b/PAO.html
@@ -267,8 +267,7 @@
                 <LI>
                     Créez un nouveau document writer</LI>
                 <LI>Créez
-                    deux cadres de taille 5 cm <FONT FACE="Symbol">×
-                        5 cm</P>
+                    deux cadres de taille 5 cm </LI>
                         <LI>
                             Sélectionnez l'un des deux</LI>
                             <LI>Cliquez
