--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -34,22 +34,22 @@
             des questions à votre enseignant.
         </answer>
 
-        <question>Il paraît qu'il n'y aura pas de contrôle final, est-ce vrai ?</question>
+      <!--  <question>Il paraît qu'il n'y aura pas de contrôle final, est-ce vrai ?</question>
 
-        <answer>Oui. Vous serez notés sur la réalisation individuelle de
+       <answer>Oui. Vous serez notés sur la réalisation individuelle de
             projets. En ce qui concerne plus particulièrement cette partie du
             cours, vous devrez réaliser un site Web concernant une entreprise fictive.
             Vous aurez une soutenance d'une dizaine de minute à réaliser en
             salle machine devant un ou plusieurs des enseignants d'informatique.
             La date et les modalités des soutenances vous seront données
-            ultérieurement.</answer>
+            ultérieurement.</answer> -->
 
         <question>Comment puis-je poser des questions en dehors des séances ?</question>
 
         <answer>Comme d'habitude, en envoyant un courrier électronique à
             votre enseignant</answer>
 
-        <question>Pourquoi me demander de ne pas imprimer ce
+      <!--  <question>Pourquoi me demander de ne pas imprimer ce
             document ?</question>
 
         <answer>Parce que le document
@@ -57,7 +57,7 @@
             hasardeuses et des fautes d'orthographes ; parce qu'il
             contient des liens hypertextes et que le papier ne permet pas encore
             de suivre les liens hypertextes quoi qu'aujourd'hui,
-            il suffise d'un téléphone...</answer>
+            il suffise d'un téléphone...</answer>-->
 
 
         <H1>Une
