--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -655,7 +655,7 @@
                                                         : la valeur que l'on souhaite donner à la propriété</P>
                                                         <P>On trouve facilement sur le Web la liste des
                                                         propriétés et des valeurs (par exemple
-                                                        <A HREF="https://openclassrooms.com/fr/courses/1603881-apprenez-a-creer-votre-site-web-avec-html5-et-css3/1608902-memento-des-proprietes-css" target="blank">le site OpenClassrooms</A> ou le site spécialisé <A HREF="http://www.css-faciles.com/proprietes-css-familles.php" target="blank">css-faciles</A>)</P>
+                                                        <A HREF="https://www.w3schools.com/css/default.asp" target="blank">le site w3schools</A>)</P>
 
                                                     </div>
 
