--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -724,7 +724,7 @@
 
 
 <section id="tp-lovable-supabase" class="tp-section">
-  <h2>Partie 1 (version “copier-coller”, resserrée et prête à l’emploi)</h2>
+  <H1>Partie 1 (version “copier-coller”, resserrée et prête à l’emploi)</H1>
 
   <h3>TP – Créer un site Web no-code avec Lovable + collecte de données via Supabase</h3>
   <p><strong>Ressources &amp; culture numérique 3 – BUT Tech de Co (2ᵉ année)</strong></p>
